# Ekun

./: .gitignore  CMakeLists.txt  EkunLog.txt  README.md
env/: EkunLog.txt  Rakefile  script.rb
env/scripts/: main.rb  slide.rb  story.rb
env/scripts/core/: color.rb  core.rb
env/scripts/core/math/: rect.rb
env/scripts/slides/: slide1.rb  slide2.rb  slide3.rb
src/: Main.cpp
src/core/: Debug.cpp  Debug.h  Ekun.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  InputHandler.cpp  InputHandler.h  SaveSystem.cpp  SaveSystem.h  StoryPlayer.cpp  StoryPlayer.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/graphics/: Button.cpp  Button.h  Font.cpp  Font.h  Sprite.cpp  Sprite.h  TextBox.cpp  TextBox.h
src/scripting/: Hash.cpp  Hash.h  MRuby.cpp  MRuby.h  MRubyUtils.cpp  MRubyUtils.h  Script.cpp  Script.h
